--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -84,8 +84,15 @@
 .homeCTA {
   margin: 24px 10px 0 42px;
   border: 2px solid var(--green);
+  box-shadow: inset 0 0 0 0 var(--green);
+  transition: ease-in-out 0.5s;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.homeCTA:hover {
+  box-shadow: inset 300px 0 0 0 var(--green);
+  color: black;
 }
 
 
@@ -95,8 +102,14 @@
   margin-bottom: 10px;
   font-weight: 300;
   color: var(--green);
+  transition: ease-in-out 0.5s;
   font-family: 'Oswald', sans-serif;
   font-size: 18px;
+}
+
+
+.homeCTA:hover >p {
+  color: black;
 }
 
 .newsAnchor {
@@ -762,21 +775,20 @@
 /* Desktops and laptops ----------- */
 @media only screen and (min-width : 1224px) {
   .backgroundVideo {
-    width: 100vw;
-    height: 102vh;
+    height: 100vh;
     z-index: -2;
   }
 
   .backgroundHover {
 
-    height: 102vh;
+    height: 100vh;
 
   }
 
   .video {
     position: absolute;
     width: 100vw;
-    height: 100vh;
+    height: 93vh;
     left: 40%;
     z-index: -1;
   }
