--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -18,7 +18,7 @@
   right: 86px;
   width: 188px;
   height: 270px;
-  background-color: #333333;
+  background-color:rgba(51, 51, 51, 0.95);
   border-radius: 4px;
   z-index: 9;
   animation: menu 0.3s ease-in-out;
@@ -182,64 +182,6 @@
   .footerIcon {
     width: 32px;
     margin-bottom: 40px;
-  }
-
-  .email {
-    padding-top: 8px;
-    width: 32px;
-  }
-
-  .email:hover {
-    filter: opacity(0.7);
-    color: var(--green)!important;
-  }
-  .email::after {
-    content: '';
-    display: block;
-    width: 0;
-    height: 2px;
-    background: #05F0D4;
-    transition: width .3s;
-    margin-top: 5px;
-  }
-  .email:hover::after {
-    width: 100%;
-  }
-
-
-
-  .tel:hover {
-    filter: opacity(0.7);
-    color: var(--green)!important;
-  }
-  .tel::after {
-    content: '';
-    display: block;
-    width: 0;
-    height: 2px;
-    background: #05F0D4;
-    transition: width .3s;
-    margin-top: 5px;
-  }
-  .tel:hover::after {
-    width: 100%;
-  }
-
-  .whatsapp:hover {
-    filter: opacity(0.7);
-    color: var(--green)!important;
-  }
-  .whatsapp::after {
-    content: '';
-    display: block;
-    width: 0;
-    height: 2px;
-    background: #05F0D4;
-    transition: width .3s;
-    margin-top: 5px;
-  }
-  .whatsapp:hover::after {
-    width: 100%;
   }
   
 
