--- a/styles/MiniProjects.module.css
+++ b/styles/MiniProjects.module.css
@@ -2,8 +2,8 @@
   width: 252px;
   height: 300px;
   flex-grow: 0;
-  margin: 34px 8px 34px 40px;
-  padding: 26px 0 38px 32px;
+  margin: 34px 34px 34px 40px;
+  padding: 26px 38px 32px;
   border-radius: 4px;
   border: solid 1px var(--white);
   transition: 0.3s;
@@ -71,6 +71,10 @@
 /* Desktops and laptops ----------- */
 @media only screen and (min-width : 1224px) {
 
+  .containerCard3, .containerCard5{
+    margin-left: 70px;
+  }
+
   .card_project_title {
     margin: 26px 20px 0px 6px;
   }
@@ -80,27 +84,25 @@
   }
 
 
-  .containerImageProject {
+  /* .containerImageProject {
     width: 368px;
-    height: 184px;
+    max-height: 184px;
+    top: 180px;
     overflow: hidden;
     border-radius: 4px 0 0 4px;
     position: absolute;
     right: 0;
-    bottom: 34px;
-  }
+    /* bottom: 34px; */
+  /* } */ 
 
-  .containerImageProject>img {
+  /* .containerImageProject>img {
 
     margin-top: -30px;
-  }
+  } */
 
-  .card_project {
-    width: 420px;
-    height: 420px;
-    margin: 5% 5%;
-    cursor: pointer;
-  }
+  
+
+ 
 
   .enterCard {
     animation-name: enterCard;
@@ -116,28 +118,39 @@
 
   .card_project {
     width: 420px;
-    margin: 5% 5%;
+    margin: 40px;
     height: 420px;
     cursor: pointer;
-
+    margin-top: 80px;
   }
 
   .containerImageProject {
     display: flex;
     width: 90%;
     height: 90%;
-    right: 0px;
-    top: 84px;
-    border-radius: 4px;
+    right: -7px;
+    top: 80px;
+    overflow: hidden;
+    border-radius: 4px 0px 0px 4px;
     flex-wrap: wrap;
     align-content: center;
   }
 
   .containerImageProject>img {
-    width: 100%;
-    border-radius: 4px;
+    border-radius: 4px 0px 0px 4px;
+  }
+  .cardImage {
+    transition: 0.5s;
+  }
+  
+  .cardImage:hover {
+    max-height: 90%;
+    transform: scale(1.1);
+    transition: 0.5s;
   }
 }
+
+
 
 @keyframes enterCard {
   from {
