--- a/styles/news.module.css
+++ b/styles/news.module.css
@@ -1,10 +1,13 @@
 .topHeader {
   width: 297px;
-  margin: 132px 36px -26px 36px;
-  font-size: 30px;
+  margin: 132px 36px -26px 44px;
+  font-size: 58px;
   font-weight: 400;
   text-align: left;
   color: var(--white);
+}
+.generalContainer {
+  padding: 10vh 7vw;
 }
 
 .wrapper_testimonials {
@@ -86,9 +89,9 @@
 }
 
 .newsCard:hover {
-  width: 552px;
-  height: 277px;
-  padding: 40px;
+  width: 550px;
+  height: 275px;
+  padding: 30px;
   box-shadow: -14px -10px 34px -13px rgba(255, 254, 237, 0.25), 10px 10px 25px 9px rgba(0, 0, 0, 0.28);
   transition: all .2s ease-in-out
 }
